// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsoleteEntryPage component should render deleted page 1`] = `
<DocumentFragment>
  <div
    class="error-page-container"
  >
    <test-file-stub
      classname="error-page-container__art-work"
    />
    <div
      class="message message--info"
      role="status"
    >
      <div
        class="message__side-border"
      />
      <test-file-stub
        height="1.125em"
        width="1.125em"
      />
      <section
        class="message__content"
      >
        <small>
          <h4>
            This entry is obsolete
          </h4>
          <p
            data-testid="deleted-entry-message"
          >
            The protein sequence for this entry is available in 
            <a
              href="/uniparc?query=I8FBX0"
            >
              UniParc
            </a>
            . For previous versions of this entry, please look at its 
            <a
              href="/uniprotkb/I8FBX0/history"
            >
              history
            </a>
            .
          </p>
        </small>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ObsoleteEntryPage component should render demerged page 1`] = `
<DocumentFragment>
  <div
    class="error-page-container"
  >
    <test-file-stub
      classname="error-page-container__art-work"
    />
    <div
      class="message message--info"
      role="status"
    >
      <div
        class="message__side-border"
      />
      <test-file-stub
        height="1.125em"
        width="1.125em"
      />
      <section
        class="message__content"
      >
        <small>
          <h4>
            This entry is obsolete
          </h4>
          <p
            data-testid="demerged-entry-message"
          >
            It can now be found as secondary accession in 
            <a
              href="/uniprotkb/P63151/entry"
            >
              P63151
            </a>
             and 
            <a
              href="/uniprotkb/P63150/entry"
            >
              P63150
            </a>
            . [
            <a
              href="/uniprotkb?query=sec_acc:Q00007"
            >
              List
            </a>
            ]
          </p>
          <p>
            The protein sequence for this entry is available in 
            <a
              href="/uniparc?query=Q00007"
            >
              UniParc
            </a>
            . For previous versions of this entry, please look at its 
            <a
              href="/uniprotkb/Q00007/history"
            >
              history
            </a>
            .
          </p>
        </small>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
